--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,114 @@ fieldset {
     border: 1px solid #54c3db;
     background-color: transparent;
 }
+.ourWork-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.ourWork-list-item {
+    flex: 1 1 25%;
+    min-width: 230px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    min-height: 300px;
+    overflow: hidden;
+    position: relative;
+    transition: 0.3s ease-in-out;
+}
+.ourwork-hidden {
+    display: none;
+}
 
+
+.ourWork-list-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.ourWork-list-item:hover img {
+    transform: scale(1.4) rotate(10deg);
+}
+.ourWork-list-item:after {
+    transition: 0.3s ease-in-out;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    background-image: url("../images/open.png");
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 2;
+    opacity: 0;
+    cursor: pointer;
+}
+.ourWork-list-item:hover:after {
+   opacity: 1;
+}
+.ourWork-list-item:active:after {
+    transform: scale(1.2);
+}
+.ourwork-show {
+    border: 1px solid #65BAF7;
+    box-sizing: border-box;
+    border-radius: 13px;
+    color: #65BAF7;
+    padding: 15px 30px;
+}
+.ourwork-show:hover {
+    background-color: #65BAF7;
+    color: #fff;
+}
+.ourwork-show:active {
+    background-color: #50a1db;
+    border: 1px solid #65BAF7;
+    outline: 0px;
+}
+.ourWork-popup, .basket-popup {
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+}
+.basket-popup {
+    opacity: 1;
+}
+.ourWork-popup__content {
+    width: 80%;
+    height: 80%;
+    transform: scale(0);
+}
+.ourWork-popup-close {
+    float: right;
+    margin-bottom: 20px;
+}
+.ourWork-popup-container {
+    text-align: center;
+    height: 100%;
+}
+.ourWork-popup-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.popup-hidden {
+    display: none;
+}
 /* catalog */
 .catalog-section {
     position: relative;
@@ -502,8 +609,318 @@ fieldset {
 }
 /* end catalog */
 
+/* delivery */
+.delivery-section {
+    background-color: #65BAF7;
+    padding-top: 51px;
+    padding-bottom: 100px;
+    color: #fff;
+}
+.delivery-section .title-h2 {
+    position: relative;
+    display: inline-block;
+    padding-right: 50px;
+    cursor: pointer;
+}
+.delivery-section .title-h2:before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0;
+    top: calc(50% - 15px);
+    background-image: url("../images/delivery-arrow.svg");
+    background-position: center;
+    background-size: cover;
+    transition: 0.3s ease-in-out;
+}
+.delivery-section .title-h2:hover:before {
+    transform: rotate(180deg);
+}
+.delivery-section .title-h2:after {
+    content: "Практически каждый из нас когда либо приобретал тяжелые и крупногабаритные вещи (мебель или бытовую технику). При этом приходилось пользоваться услугой доставки, которую предлагает магазин, где куплена вещь. Если вы дали согласие на услугу по доставке товара ее остается оформить и оплатить, при этом следует помнить, что доставка товара - услуга дополнительная и магазин не вправе ее навязывать, а может только предложить, проинформировав покупателя о цене, условиях и сроках доставки.В случае если вы доставляете товар самостоятельно, нужно быть готовыми к тому, что при доставке придется нести ответственность за все механические недостатки (поломки, сколы, трещины и т.д.), которые могут появиться по пути из магазина до квартиры.Однако немало проблем возникает и тогда, когда доставку осуществляет соответствующая сервисная служба магазина. Нередко за эту услугу водители, доставляющие покупку, требуют деньги. Изумленному хозяину приходится платить, не получая взамен никаких документов.А если доставка все же сопровождается подписанием акта, то зачастую это происходит в такой спешке, что покупателю не остается времени для осмотра товара. Когда же выясняется, что во время транспортировки новую стиральную машину растрясло, погнулся корпус, слетел ремень с барабана или треснула кювета, возникает вопрос: что делать?";
+    position: absolute;
+    font-size: 16px;
+    font-weight: normal;
+    color: #65BAF7;
+    top: 60px;
+    width: 60vw;
+    min-height: 150px;
+    opacity: 0;
+
+    background-color: rgba(255,255,255, 0.9);
+    display: none;
+    padding: 40px;
+}
+
+.delivery-section .title-h2:hover:after {
+    display: block;
+    opacity: 1;
+    z-index: 2;
+}
+
+.delivery-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.delivery-list__item {
+    text-align: center;
+    flex: 1 1 25%;
+    margin-right: 40px;
+    min-width: 250px;
+    margin-bottom: 40px;
+    padding-top: 100px;
+    position: relative;
+}
+.delivery-list__item:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 80px;
+    height: 80px;
+    right: calc(50% - 40px);
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.delivery-list__item:nth-child(1):before {
+    background-image: url("../images/delivery-icone1.svg");
+}
+.delivery-list__item:nth-child(2):before {
+    background-image: url("../images/delivery-icone2.svg");
+}
+.delivery-list__item:nth-child(3):before {
+    background-image: url("../images/delivery-icone3.svg");
+}
+.delivery-h3 {
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+
+/* contacts */
+
+.contact-section {
+    background-color: #A744D9;
+    color: #fff;
+}
+.contact-section .container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.contact-left {
+    flex: 1;
+    margin-right: 30px;
+    min-width: 280px;
+}
+.contact-right {
+    width: 70%;
+    border: 1px solid #fff;
+}
+.contact-list-item {
+    margin-bottom: 20px;
+}
+.contact-list-item:nth-last-child(2) {
+    margin-bottom: 40px;
+}
+.contact-list-item .mail,
+.contact-list-item.phone,
+.contact-list-item .contakt-address {
+    padding-left: 30px;
+    background-position: left center;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    font-style: normal;
+}
+.contact-list-item.phone .contact-link {
+    display: block;
+}
+.contact-list-item .mail {
+    background-image: url("../images/contacts/mail.svg");
+}
+.contact-list-item.phone {
+    background-image: url("../images/contacts/phone.svg");
+    background-position: left top;
+}
+.contact-list-item .contakt-address {
+    background-image: url("../images/contacts/address.svg");
+}
+
+.contact-list-social {
+    display: flex;
+}
+.contact-list-social__item:not(:last-child) {
+    margin-right: 20px;
+}
+
+/* footer */
+
+.footer {
+    background-color: #414141;
+    color: #fff;
+}
+.footer .container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer a, .footer p {
+    font-weight: 300;
+}
+.footer .center-footer-h3 {
+    font-size: 25px;
+    color: #A744D9;;
+}
+.footer .phone {
+    padding-left: 20px;
+    background-image: url("../images/phone.svg");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: left center;
+    font-size: 18px;
+}
+.footer .left-footer .footer-link {
+    display: block;
+}
+.footer .left-footer .footer-link:first-child {
+    margin-bottom: 30px;
+}
+.footer .left-footer,
+.footer .center-footer,
+.footer .right-footer {
+    flex: 1 1 30%;
+    
+}
+.right-footer {
+    min-width: 280px;
+    line-height: 2;
+}
+.footer .left-footer,
+.footer .center-footer {
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+.center-footer-list {
+    column-count: 2;
+}
+.center-footer-h3 {
+    margin-bottom: 30px;
+}
+
+.center-footer-item {
+    margin-bottom: 20px;
+}
+.left-footer .footer-link img {
+    width: 100%;
+    min-width: 260px;
+}
+
+/* basket */
+.basket-popup {
+    padding: 40px;
+    display: none;
+    opacity: 0;
+}
+.basket-content {
+    padding: 40px;
+    background-color: #fff;
+    width: 40vw;
+    max-height: 900px;
+    height: 100%;
+}
+
+.basket-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.basket-list {
+    margin-bottom: 20px;
+}
+.basket-input {
+    display: block;
+    min-width: 260px;
+    width: 100%;
+    font-family: inherit;
+    font-weight: 300;
+    border: 0px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #F1f1f1;
+    margin-bottom: 20px;
+}
+
+.basket-submit {
+    border-radius: 5px;
+    border: 2px solid #f1f1f1;
+    padding: 15px 10px;
+
+    min-width: 260px;
+}
+.basket-submit:focus {
+    border: 2px solid var(--color-blue);
+}
+.basket-submit:hover {
+    background-color: rgba(101, 186, 247, 50%);
+}
+.basket-submit:active {
+    background-color: rgba(101, 186, 247, 100%);
+}
+
+.basket-list-item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: -1px;
+}
+.basket-list-item .basket-list-item__price {
+    margin-left: auto;
+    margin-right: 40px;
+}
+
+.basket-item-image {
+    width: 100px;
+    margin-right: 20px;
+}
+.basket-item-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.basket-sumprice {
+    margin-bottom: 30px;
+}
+.basket-sumprice .sum-price {
+    font-size: 25px;
+    color: #993e3efe;
+    font-weight: bold;
+}
+.header-basket {
+    position: relative
+}
+.basket-count {
+    border-radius: 100%;
+    display: inline-block;
+    background-color: red;
+    padding: 3px 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    position: absolute;
+    right: -10px;
+    bottom: -6px;
+}
 @media (min-width: 1200px) {
 
+    .contact-list-item {
+        margin-bottom: 20px;
+    }
     .header-top-item svg path {
         transition: 0.2s ease-in-out;
     }
@@ -532,8 +949,50 @@ fieldset {
     }
 }
 
+@media (max-width: 1366px) {
+    .basket-content {
+        width: 70vw;
+    }
+    .delivery-section .title-h2:after {
+        width: 80vw;
+    }
 
+    .contact-list {
+        display: grid;
+        grid-gap: 50px;
+        grid-template-columns: 1fr 1fr 1fr 2fr;
+    }
+    .contact-list-social {
+        display: flex;
+        justify-content: space-between;
+    }
+    .contact-right {
+        width: 100%;
+        border: 1px solid #fff;
+    }
+}
 @media (max-width: 1024px) {
+    .basket-content {
+        width: 100vw;
+    }
+ 
+    .contact-list {
+        display: flex;
+        flex-wrap: wrap;
+        grid-gap: 20px;
+        justify-content: space-between;
+    }
+    .contact-list-item:last-child {
+        width: 100%;
+    }
+
+    .ourWork-popup__content {
+        height: auto;
+    }
+    
+    .delivery-section .title-h2:before, .delivery-section .title-h2:after, .delivery-section .title-h2:hover:before, .delivery-section .title-h2:hover:after {
+        display: none;
+    }
     .banner {
         background: url("../images/banner-1024.webp") center/cover;
         background-size: cover;
@@ -609,6 +1068,40 @@ fieldset {
 }
 
 @media (max-width: 576px) {
+    .basket-content {
+        padding: 15px;
+    }
+    .basket-list-item  {
+       display: block;
+    }
+    .basket-list-item__delete {
+        float: right;
+    }
+    .basket-list-item__h3 {
+        margin-bottom: 15px;
+    }
+    .basket-list-item__delete svg {
+        width: 30px !important;
+        height: 15px !important;
+    }
+    .basket-list-item 
+    p {
+        font-size: 0.8rem;
+    }
+    h2 {
+        font-size: 2rem !important;
+    }
+    h3 {
+        font-size: 1.5rem;
+    }
+    .basket-popup .basket-h2 {
+        font-size: 25px !important;
+    }
+    
+    .ourWork-list-item {
+        min-width: 280px;
+        margin-right: 0px;
+    }
     .catalog-section:before {
         height: 140px;
         top: -80px;
